# Smort

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/movement/: movement.cpp
examples/movement/shaders/: SimpleFragmentShader.frag  SimpleVertexShader.vert
examples/utils/: TestScene.cpp  TestScene.hpp
include/movement/: Arrive.hpp  Flee.hpp  Kinetic.hpp  Seek.hpp  SteeringAlgorithm.hpp  movement.hpp  utils.hpp
src/: main.cpp
src/movement/: Arrive.cpp  Flee.cpp  Seek.cpp  SteeringAlgorithm.cpp  movement.cpp  utils.cpp
